手机端产品更新

--- a/app/frontend/view/mobile/product/detail.html
+++ b/app/frontend/view/mobile/product/detail.html
@@ -156,19 +156,19 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="//china.wavlink.com/images/banner/en_US/QUANTUM D4G.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Scale/1.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                    <img src="//china.wavlink.com/images/banner/en_US/WN575A4.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Scale/2.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                    <img src="//china.wavlink.com/images/banner/en_US/UTD01.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Scale/3.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                    <img src="//china.wavlink.com/images/banner/en_US/UG69PD2.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Scale/4.jpg" alt="">
                 </div>
                 <div class="swiper-slide">
-                    <img src="//china.wavlink.com/images/banner/en_US/WN530H4.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Scale/5.jpg" alt="">
                 </div>
             </div>
             <div class="swiper-pagination"></div><!--分页器-->
@@ -197,11 +197,21 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/1.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/1.jpg" alt="">
                 </div>
             </div>
             <!-- two -->
             <div class="page-two page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/2.jpg" alt="">
+                </div>
+            </div>
+            <!-- three -->
+            <div class="page-three page-box">
                 <div class="des-box">
                     <h3>3 Speeds Cool You Down Fast</h3>
                     <p>
@@ -210,11 +220,11 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/2.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/3.jpg" alt="">
                 </div>
             </div>
-            <!-- three -->
-            <div class="page-three page-box">
+            <!-- four -->
+            <div class="page-four page-box">
                 <div class="des-box">
                     <h3>A Portable But Furthermore, A Desktop Fan</h3>
                     <p>
@@ -223,11 +233,11 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/3.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/4.jpg" alt="">
                 </div>
             </div>
-            <!-- four -->
-            <div class="page-four page-box">
+            <!-- five -->
+            <div class="page-five page-box">
                 <div class="des-box">
                     <h3>Dual Power Source</h3>
                     <p>
@@ -236,11 +246,11 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/4.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/5.jpg" alt="">
                 </div>
             </div>
-            <!-- five -->
-            <div class="page-five page-box">
+            <!-- six -->
+            <div class="page-six page-box">
                 <div class="des-box">
                     <h3>Choose Your Desire Direction of Wind</h3>
                     <p>
@@ -249,11 +259,11 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/5.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/6.jpg" alt="">
                 </div>
             </div>
-            <!-- six -->
-            <div class="page-six page-box">
+            <!-- seven -->
+            <div class="page-seven page-box">
                 <div class="des-box">
                     <h3>Enjoy A Whispering Breeze</h3>
                     <p>
@@ -262,11 +272,11 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/6.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/7.jpg" alt="">
                 </div>
             </div>
-            <!-- seven -->
-            <div class="page-seven page-box">
+            <!-- eight -->
+            <div class="page-eight page-box">
                 <div class="des-box">
                     <h3>Removable Grill Cool and Clean</h3>
                     <p>
@@ -274,33 +284,39 @@
                     </p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/7.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/8.jpg" alt="">
                 </div>
             </div>
-            <!-- eight -->
-            <!--<div class="page-eight page-box">
-                <div class="des-box">
-                    <h3></h3>
-                    <p>
-
-                    </p>
-                </div>
-                <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/8.jpg" alt="">
-                </div>
-            </div>
-            &lt;!&ndash; nine &ndash;&gt;
+            <!-- nine -->
             <div class="page-nine page-box">
                 <div class="des-box">
                     <h3></h3>
-                    <p>
-
-                    </p>
+                    <p></p>
                 </div>
                 <div class="img-box">
-                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/9.jpg" alt="">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/9.jpg" alt="">
                 </div>
-            </div>-->
+            </div>
+            <!-- ten -->
+            <div class="page-ten page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/Mobile/10.jpg" alt="">
+                </div>
+            </div>
+            <!-- eleven -->
+            <div class="page-eleven page-box">
+                <div class="des-box">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="img-box">
+                    <img src="//minthouz.oss-cn-shenzhen.aliyuncs.com/images/product/English/Fan1/PC/11.jpg" alt="">
+                </div>
+            </div>
         </div>
     </div>
 
