--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{{frontend}}/desktop/css/page/Product-detail.css">
 <style>
     .page-one .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
-    .page-two .des-box { width: 30%; top: 10%; left: 10%; }
+    .page-two .des-box {  }
     .page-three .des-box { width: 50%; top: 10%; left: 25%; text-align: center; }
     .page-four .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
     .page-five .des-box { width: 50%; top: 5%; left: 25%; text-align: center; }
@@ -20,27 +20,27 @@
     .page-eleven .des-box {  }
 
     @media screen and (min-width: 768px) and (max-width: 991px) {
-        .page-one .des-box { width: 45%; top: 10%; left: 5%; }
-        .page-two .des-box { width: 45%; top: 10%; left: 5%; }
-        .page-three .des-box { width: 80%; top: 5%; left: 10%; text-align: center; }
+        .page-one .des-box { width: 80%; top: 5%; left: 10%; }
+        .page-two .des-box {  }
+        .page-three .des-box { width: 80%; top: 10%; left: 10%; text-align: center; }
         .page-four .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
-        .page-five .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
+        .page-five .des-box { width: 80%; top: 1%; left: 10%; text-align: center; }
         .page-six .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-seven .des-box { width: 45%; top: 15%; left: 6%; }
-        .page-eight .des-box { width: 30%; top: 15%; left: 65.3%; }
+        .page-seven .des-box { width: 45%; top: 15%; left: 7%; }
+        .page-eight .des-box { width: 40%; top: 5%; left: 60%; }
         .page-nine .des-box {  }
         .page-ten .des-box {  }
         .page-eleven .des-box {  }
     }
     @media screen and (min-width: 991px) and (max-width: 1199px) {
-        .page-one .des-box { width: 45%; top: 10%; left: 8%; }
-        .page-two .des-box { width: 45%; top: 10%; left: 8%; }
-        .page-three .des-box { width: 80%; top: 5%; left: 10%; text-align: center; }
+        .page-one .des-box { width: 60%; top: 5%; left: 20%; }
+        .page-two .des-box {  }
+        .page-three .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
         .page-four .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
         .page-five .des-box { width: 80%; top: 3%; left: 10%; text-align: center; }
         .page-six .des-box { width: 80%; top: 8%; left: 10%; text-align: center; }
-        .page-seven .des-box { width: 45%; top: 15%; left: 6%; }
-        .page-eight .des-box { width: 30%; top: 15%; left: 65.3%; }
+        .page-seven .des-box { width: 45%; top: 15%; left: 7%; }
+        .page-eight .des-box { width: 38%; top: 10%; left: 60%; }
         .page-nine .des-box {  }
         .page-ten .des-box {  }
         .page-eleven .des-box {  }
