--- a/public/static/frontend/mobile/css/page/Product-list.css
+++ b/public/static/frontend/mobile/css/page/Product-list.css
@@ -72,12 +72,16 @@
   margin-right: auto;
 }
 .product-list .list-box .list-item a p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   overflow: hidden;
-  padding: 30px 0;
+  position: relative;
+  line-height: 22px;
+  height: 66px;
+  margin: 20px 0;
   color: #333;
-  line-height: 20px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -ms-transform: all 0.2s linear;
