--- a/public/static/frontend/mobile/css/page/Product-list.less
+++ b/public/static/frontend/mobile/css/page/Product-list.less
@@ -65,10 +65,9 @@
             .center-block();
         }
         .list-item a p {
-            .text-overflow();
-            padding: 30px 0;
+            .text-overflow-many(100%, 3);
+            margin: 20px 0;
             color: @baseColor;
-            line-height: 20px;
             #transition(all .2s linear);
         }
     }
