--- a/app/admin/view/common/header.html
+++ b/app/admin/view/common/header.html
@@ -24,7 +24,8 @@
                         <i class="iconfont">&#xe6b8;</i>在tab打开</a></dd>
                 <dd>
                     <a onclick="xadmin.add_tab('在tab打开刷新','member-del.html',true)">
-                        <i class="iconfont">&#xe6b8;</i>在tab打开刷新</a></dd>
+                        <i class="iconfont">&#xe6b8;</i>在tab打开刷新</a>
+                      </dd>
             </dl>
         </li>
     </ul>-->
