详情页交互效果调整

--- a/app/frontend/view/desktop/product/detail.html
+++ b/app/frontend/view/desktop/product/detail.html
@@ -194,128 +194,129 @@
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="product-Specifications">
-        <div class="offset-box" id="specification">
-            <ul>
-                <li class="li_title">
-                    <strong>TECHNICAL SPECIFICATIONS</strong>
-                </li>
-                <li>
-                    <strong>Model</strong>
-                    <div>
-                        <p>WN531A6</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Ports</strong>
-                    <div>
-                        <p>1 x 10/100/1000Mbps WAN</p>
-                        <p>4 x 10/100/1000Mbps LAN</p>
-                        <p>1 x USB 3.0</p>
-                        <p>1 x DC Power Jack Port</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Buttons</strong>
-                    <div>
-                        <p>1 x Power On/Off button</p>
-                        <p>1 x Reset button</p>
-                        <p>1 x WPS button</p>
-                        <p>1 x TURBO button</p>
-                        <p>1 x Touch cover button</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>LED</strong>
-                    <div>
-                        <p>1 x WiFi</p>
-                        <p>1 x WAN</p>
-                        <p>4 x LAN</p>
-                        <p>1 x Power</p>
-                        <p>1 x Logo</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Power Supply</strong>
-                    <div>
-                        <p>DC5V / 3A</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Rated Voltage / Frequency</strong>
-                    <div>
-                        <p>input:100-240 Va.c. 50/60Hz</p>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="li_title">
-                    <strong>DIMENSIONS</strong>
-                </li>
-                <li>
-                    <strong>Unit Dimensions</strong>
-                    <div>
-                        <p>200mm x 200mm x 30mm ( L x W x H )</p>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="li_title">
-                    <strong>WIRELESS</strong>
-                </li>
-                <li>
-                    <strong>Standard</strong>
-                    <div>
-                        <p>IEEE 802.11a/b/g/n/ac</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Speed</strong>
-                    <div>
-                        <p>IEEE 802.11ac: up to 1733Mbps</p>
-                        <p>IEEE 802.11n: up to 300Mbps</p>
-                        <p>IEEE 802.11g: 54Mbps</p>
-                        <p>IEEE 802.11b: 11Mbps</p>
-                        <p>IEEE 802.11a: up to 54Mbps</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Frequency Band</strong>
-                    <div>
-                        <p>2.4GHz, 5GHz</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Wireless Security</strong>
-                    <div>
-                        <p>WPA-PSK/ WPA2-PSK encryption</p>
-                    </div>
-                </li>
-                <li>
-                    <strong>Antennas</strong>
-                    <div>
-                        <p>6 x 5dBi Omni Directional Antennas</p>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li class="li_title">
-                    <strong>PACKAGE</strong>
-                </li>
-                <li>
-                    <strong>In The Box</strong>
-                    <div>
-                        <p>1 x Wireless Router</p>
-                        <p>1 x RJ45 Networking Cable</p>
-                        <p>1 x Power Adapter</p>
-                        <p>1 x Quick Guide</p>
-                    </div>
-                </li>
-            </ul>
+        <div class="product-Specifications">
+            <div class="offset-box" id="specification">
+                <ul>
+                    <li class="li_title">
+                        <strong>TECHNICAL SPECIFICATIONS</strong>
+                    </li>
+                    <li>
+                        <strong>Model</strong>
+                        <div>
+                            <p>WN531A6</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Ports</strong>
+                        <div>
+                            <p>1 x 10/100/1000Mbps WAN</p>
+                            <p>4 x 10/100/1000Mbps LAN</p>
+                            <p>1 x USB 3.0</p>
+                            <p>1 x DC Power Jack Port</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Buttons</strong>
+                        <div>
+                            <p>1 x Power On/Off button</p>
+                            <p>1 x Reset button</p>
+                            <p>1 x WPS button</p>
+                            <p>1 x TURBO button</p>
+                            <p>1 x Touch cover button</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>LED</strong>
+                        <div>
+                            <p>1 x WiFi</p>
+                            <p>1 x WAN</p>
+                            <p>4 x LAN</p>
+                            <p>1 x Power</p>
+                            <p>1 x Logo</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Power Supply</strong>
+                        <div>
+                            <p>DC5V / 3A</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Rated Voltage / Frequency</strong>
+                        <div>
+                            <p>input:100-240 Va.c. 50/60Hz</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="li_title">
+                        <strong>DIMENSIONS</strong>
+                    </li>
+                    <li>
+                        <strong>Unit Dimensions</strong>
+                        <div>
+                            <p>200mm x 200mm x 30mm ( L x W x H )</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="li_title">
+                        <strong>WIRELESS</strong>
+                    </li>
+                    <li>
+                        <strong>Standard</strong>
+                        <div>
+                            <p>IEEE 802.11a/b/g/n/ac</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Speed</strong>
+                        <div>
+                            <p>IEEE 802.11ac: up to 1733Mbps</p>
+                            <p>IEEE 802.11n: up to 300Mbps</p>
+                            <p>IEEE 802.11g: 54Mbps</p>
+                            <p>IEEE 802.11b: 11Mbps</p>
+                            <p>IEEE 802.11a: up to 54Mbps</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Frequency Band</strong>
+                        <div>
+                            <p>2.4GHz, 5GHz</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Wireless Security</strong>
+                        <div>
+                            <p>WPA-PSK/ WPA2-PSK encryption</p>
+                        </div>
+                    </li>
+                    <li>
+                        <strong>Antennas</strong>
+                        <div>
+                            <p>6 x 5dBi Omni Directional Antennas</p>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li class="li_title">
+                        <strong>PACKAGE</strong>
+                    </li>
+                    <li>
+                        <strong>In The Box</strong>
+                        <div>
+                            <p>1 x Wireless Router</p>
+                            <p>1 x RJ45 Networking Cable</p>
+                            <p>1 x Power Adapter</p>
+                            <p>1 x Quick Guide</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+
 </div>
 {/block}
 
@@ -344,22 +345,21 @@
     }
 
     function navTableChange () {
+        var navH = $(".product-nav").innerHeight();
         var subNav = $('.sub_nav span'),
-            overviewDom = $('.product-Detail'),
-            SpecificationsDom = $('.product-Specifications');
-        subNav.click(function () {
-            var a = $(this).index();
-            if (a === 0) {
-                overviewDom.css('display', 'block');
-                $(this).addClass('active');
-                SpecificationsDom.css('display', 'none');
-                $(this).siblings('span').removeClass('active');
-            } else if (a === 1) {
-                overviewDom.css('display', 'none');
-                $(this).addClass('active');
-                SpecificationsDom.css('display', 'block');
-                $(this).siblings('span').removeClass('active');
+            overviewDom = $('.product-Detail');
+        function animateScroll (that) {
+            var index = that.index();
+            if(index<=1){
+                var div_height = overviewDom.children('div').eq(index).offset().top || 0;
+                var scroll_top = div_height - navH;
+                that.siblings('span').removeClass('active');
+                that.addClass('active');
+                $("html,body").animate({"scrollTop":scroll_top},300);
             }
+        }
+        subNav.click(function () {
+            animateScroll($(this))
         });
     }
 
