幻灯片功能增加移动端图片选择功能

--- a/app/admin/view/content/prettiest/index.html
+++ b/app/admin/view/content/prettiest/index.html
@@ -43,7 +43,7 @@
                                 <td>{$vo.id}</td>
                                 <td>
                                     <span style="width: 100px;height: 100px;display: inline-block">
-                                        <img src="{$vo.image}" alt="" style="width: 100%;height: 100%">
+                                        <img src="{$vo.desktop}" alt="" style="width: 100%;height: 100%">
                                     </span>
                                 </td>
                                 <td>{$vo.title}</td>
