--- a/app/admin/view/content/prettiest/add.html
+++ b/app/admin/view/content/prettiest/add.html
@@ -28,11 +28,11 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/list\',[\'path\'=>\'images\/\',\'type\'=>\'1\'])}')"><i
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'desktop\'])}')"><i
                             class="layui-icon"></i>选择</button>
-                    <div class="image" style="height: 92px;padding-top: 5px">
+                    <div class="desktop" style="height: 92px;padding-top: 5px">
                         <img src="" alt="" style="height: 92px">
-                        <input type="hidden" name="image" value="" id="image">
+                        <input type="hidden" name="desktop" value="" id="desktop">
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                        onclick="xadmin.open('选择图片','{:url(\'media/image/list\',[\'path\'=>\'images\/\',\'type\'=>\'1\'])}')"><i
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'mobile\'])}')"><i
                             class="layui-icon"></i>选择</button>
                     <div class="mobile" style="height: 92px;padding-top: 5px">
                         <img src="" alt="" style="height: 92px">
