--- a/app/admin/view/content/prettiest/edit.html
+++ b/app/admin/view/content/prettiest/edit.html
@@ -20,18 +20,36 @@
                 </label>
                 <div class="layui-input-inline">
                     <input type="text" id="listorder" name="listorder" required="" lay-verify="required"
-                           autocomplete="off" class="layui-input" value="{$data.listorder}">
+                        autocomplete="off" class="layui-input" value="{$data.listorder}">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label for="image" class="layui-form-label">
-                    <span class="x-red">*</span>图片
+                    <span class="x-red">*</span>桌面端
                 </label>
                 <div class="layui-input-inline">
-                    <button class="layui-btn" type="button" onclick="xadmin.open('选择图片','{:url(\'media/image/list\',[\'path\'=>\'images\/\',\'type\'=>\'1\'])}')"><i class="layui-icon"></i>选择</button>
-                    <div class="image" style="height: 92px;padding-top: 5px">
-                        <img src="{$data.image}" alt="" style="height: 92px">
-                        <input type="hidden" name="image" value="{$data.image}" id="image">
+                    <button class="layui-btn" type="button"
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'desktop\'])}')">
+                        <i class="layui-icon"></i>选择
+                    </button>
+                    <div class="desktop" style="height: 92px;padding-top: 5px">
+                        <img src="{$data.desktop}" alt="" style="height: 92px">
+                        <input type="hidden" name="desktop" value="{$data.desktop}" id="desktop">
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label for="image" class="layui-form-label">
+                    <span class="x-red">*</span>移动端
+                </label>
+                <div class="layui-input-inline">
+                    <button class="layui-btn" type="button"
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'mobile\'])}')">
+                        <i class="layui-icon"></i>选择
+                    </button>
+                    <div class="mobile" style="height: 92px;padding-top: 5px">
+                        <img src="{$data.mobile}" alt="" style="height: 92px">
+                        <input type="hidden" name="mobile" value="{$data.mobile}" id="mobile">
                     </div>
                 </div>
             </div>
@@ -40,7 +58,8 @@
                     标题
                 </label>
                 <div class="layui-input-block" style="width: 50%">
-                    <input type="text" id="title" name="title" required="" autocomplete="off" class="layui-input" value="{$data.title}">
+                    <input type="text" id="title" name="title" required="" autocomplete="off" class="layui-input"
+                        value="{$data.title}">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -48,7 +67,8 @@
                     描述
                 </label>
                 <div class="layui-input-block" style="width: 50%">
-                    <textarea name="description" id="description" placeholder="请输入内容" class="layui-textarea">{$data.description}</textarea>
+                    <textarea name="description" id="description" placeholder="请输入内容"
+                        class="layui-textarea">{$data.description}</textarea>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -56,15 +76,17 @@
                     按钮文案
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="button" name="button" required="" autocomplete="off" class="layui-input" value="{$data.button}">
+                    <input type="text" id="button" name="button" required="" autocomplete="off" class="layui-input"
+                        value="{$data.button}">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label for="path" class="layui-form-label">
                     指向链接
                 </label>
-                <div class="layui-input-block" style="width: 50%" >
-                    <input type="text" id="path" name="path" required="" autocomplete="off" class="layui-input" value="{$data.path}">
+                <div class="layui-input-block" style="width: 50%">
+                    <input type="text" id="path" name="path" required="" autocomplete="off" class="layui-input"
+                        value="{$data.path}">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -97,12 +119,12 @@
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 1000}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 1000 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
                             } else {
-                                layer.msg(result.message, {'icon': 5, 'time': 8000});
+                                layer.msg(result.message, { 'icon': 5, 'time': 8000 });
                             }
                         }
                     }, 'JSON');
