--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -29,21 +29,24 @@
             </div>
             <div class="img-box">
                 <a href="{$vo.path}">
-                    <img src="{$vo.image}" alt="">
+                    <img src="{$vo.desktop}" alt="">
                 </a>
             </div>
         </div>
         {/volist}
     </div>
-    <div class="swiper-pagination"></div><!--分页器-->
-    <div class="swiper-button-prev"></div><!--左箭头-->
-    <div class="swiper-button-next"></div><!--右箭头-->
+    <div class="swiper-pagination"></div>
+    <!--分页器-->
+    <div class="swiper-button-prev"></div>
+    <!--左箭头-->
+    <div class="swiper-button-next"></div>
+    <!--右箭头-->
 </div>
 <div class="hot common-width">
     <div class="min-list">
         {volist name="hot" id="vo"}
         <div class="min-item">
-            <a href="{$vo.path}"><img src="{$vo.image}" alt=""></a>
+            <a href="{$vo.path}"><img src="{$vo.desktop}" alt=""></a>
         </div>
         {/volist}
     </div>
@@ -53,13 +56,13 @@
     <div class="star-list">
         <div class="left">
             <div class="star-item">
-                <a href="{$starProduct[0]['path']}"><img src="{$starProduct[0]['image']}" alt=""></a>
+                <a href="{$starProduct[0]['path']}"><img src="{$starProduct[0]['desktop']}" alt=""></a>
             </div>
         </div>
         <div class="right">
             {volist name="starProduct" id="vo" offset='1' length="3"}
             <div class="star-item">
-                <a href="{$vo.path}"><img src="{$vo.image}" alt=""></a>
+                <a href="{$vo.path}"><img src="{$vo.desktop}" alt=""></a>
             </div>
             {/volist}
         </div>
@@ -69,7 +72,8 @@
     <h3><span>VIDEOS</span></h3>
     <div class="video-list">
         <div class="thumbnail">
-            <a class="play" href="javascript:void(0)" data-url="//china.wavlink.com/videos/690AD5.mp4" data-title="VITESSE - AC1900 High-speed Gaming WiFi Adapter with USB3.0 Dock">
+            <a class="play" href="javascript:void(0)" data-url="//china.wavlink.com/videos/690AD5.mp4"
+                data-title="VITESSE - AC1900 High-speed Gaming WiFi Adapter with USB3.0 Dock">
                 <div class="img-box">
                     <img src="//china.wavlink.com/images/vitesse/VITESSE_AC1900.jpg" alt="...">
                     <div class="icon-box">
@@ -81,9 +85,11 @@
     </div>
     <div class="video-list">
         <div class="thumbnail">
-            <a class="play" href="javascript:void(0)" data-url="https://www.youtube.com/embed/ffpfdN4MxXk" data-title="Wavlink HALO Base AC1200 Dual-band Whole Home WiFi Mesh System with Touchlink">
+            <a class="play" href="javascript:void(0)" data-url="https://www.youtube.com/embed/ffpfdN4MxXk"
+                data-title="Wavlink HALO Base AC1200 Dual-band Whole Home WiFi Mesh System with Touchlink">
                 <div class="img-box">
-                    <img src="https://s3.amazonaws.com/files.wavlink.com/video/2020/01/wavlink_HALO_Base_AC1200.jpg" alt="...">
+                    <img src="https://s3.amazonaws.com/files.wavlink.com/video/2020/01/wavlink_HALO_Base_AC1200.jpg"
+                        alt="...">
                     <div class="icon-box">
                         <span class="iconfont"></span>
                     </div>
@@ -93,7 +99,8 @@
     </div>
     <div class="video-list">
         <div class="thumbnail">
-            <a class="play" href="javascript:void(0)" data-url="https://www.youtube.com/embed/sZl057HvSt0" data-title="Why Should Choose AERIAL X WiFi Range Extender?">
+            <a class="play" href="javascript:void(0)" data-url="https://www.youtube.com/embed/sZl057HvSt0"
+                data-title="Why Should Choose AERIAL X WiFi Range Extender?">
                 <div class="img-box">
                     <img src="https://s3.amazonaws.com/files.wavlink.com/video/2020/01/AERIAL_X.jpg" alt="...">
                     <div class="icon-box">
