--- a/app/admin/view/content/notice/notice.html
+++ b/app/admin/view/content/notice/notice.html
@@ -4,20 +4,39 @@
     <div class="layui-row">
         <form class="layui-form">
             <div class="layui-form-item">
-                <label for="image" class="layui-form-label">图片
+                <label for="image" class="layui-form-label">桌面端
                 </label>
                 <div class="layui-input-inline">
                     <button class="layui-btn" type="button"
-                            onclick="xadmin.open('选择图片','{:url(\'media/image_list\',[\'path\'=>\'images\/\'])}')"><i
-                            class="layui-icon"></i>选择
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'desktop\'])}')">
+                        <i class="layui-icon"></i>选择
                     </button>
-                    <div class="image" style="height: 92px;padding-top: 5px">
-                        {notempty name="data.image"}
-                        <img src="{$data.image}" alt="" style="height: 92px">
-                        <input type="hidden" name="image" value="{$data.image}" id="image">
+                    <div class="desktop" style="height: 92px;padding-top: 5px">
+                        {notempty name="data.desktop"}
+                        <img src="{$data.desktop}" alt="" style="height: 92px">
+                        <input type="hidden" name="desktop" value="{$data.desktop}" id="desktop">
                         {else /}
                         <img src="" alt="" style="height: 92px">
-                        <input type="hidden" name="image"value="" id="image">
+                        <input type="hidden" name="desktop" value="" id="desktop">
+                        {/notempty}
+                    </div>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label for="image" class="layui-form-label">移动端
+                </label>
+                <div class="layui-input-inline">
+                    <button class="layui-btn" type="button"
+                        onclick="xadmin.open('选择图片','{:url(\'media/image/select\',[\'path\'=>\'images\/\',\'type\'=>\'1\',\'pos\'=>\'mobile\'])}')">
+                        <i class="layui-icon"></i>选择
+                    </button>
+                    <div class="mobile" style="height: 92px;padding-top: 5px">
+                        {notempty name="data.mobile"}
+                        <img src="{$data.mobile}" alt="" style="height: 92px">
+                        <input type="hidden" name="mobile" value="{$data.mobile}" id="mobile">
+                        {else /}
+                        <img src="" alt="" style="height: 92px">
+                        <input type="hidden" name="mobile" value="" id="mobile">
                         {/notempty}
                     </div>
                 </div>
@@ -27,16 +46,18 @@
                     通知描述
                 </label>
                 <div class="layui-input-block" style="width: 50%">
-                    <textarea name="notice" id="notice" placeholder="请输入内容" class="layui-textarea">{notempty name="data.notice"}{$data.notice}{/notempty}</textarea>
+                    <textarea name="notice" id="notice" placeholder="请输入内容"
+                        class="layui-textarea">{notempty name="data.notice"}{$data.notice}{/notempty}</textarea>
                 </div>
             </div>
             <div class="layui-form-item">
                 <label for="path" class="layui-form-label">
                     指向链接
                 </label>
-                <div class="layui-input-block" style="width: 50%" >
+                <div class="layui-input-block" style="width: 50%">
                     {notempty name="data.path"}
-                    <input type="text" id="path" name="path" required="" autocomplete="off" class="layui-input" value="{$data.path}">
+                    <input type="text" id="path" name="path" required="" autocomplete="off" class="layui-input"
+                        value="{$data.path}">
                     {else /}
                     <input type="text" id="path" name="path" required="" autocomplete="off" class="layui-input">
                     {/notempty}
@@ -74,12 +95,12 @@
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 500}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 500 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
                             } else {
-                                layer.msg(result.message, {'icon': 5, 'time': 1000});
+                                layer.msg(result.message, { 'icon': 5, 'time': 1000 });
                             }
                         }
                     }, 'JSON');
