--- a/app/frontend/view/desktop/common/footer.html
+++ b/app/frontend/view/desktop/common/footer.html
@@ -19,9 +19,9 @@
                 </div>
                 <div class="ico-box">
                     <a href="#"><span class="iconfont iconicon-test1"></span></a>
-                    <a href="#"><span class="iconfont iconyoutube"></span></a>
-                    <a href="#"><span class="iconfont iconinstagram"></span></a>
-                    <a href="#"><span class="iconfont iconicon-test2"></span></a>
+                    <a href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span class="iconfont iconyoutube"></span></a>
+                    <a href="https://www.instagram.com/minthouz/"><span class="iconfont iconinstagram"></span></a>
+                    <a href="https://twitter.com/minthouz"><span class="iconfont iconicon-test2"></span></a>
                 </div>
             </div>
         </div>
@@ -45,9 +45,9 @@
                 <dl>
                     <dt>FIND US</dt>
                     <dd><i class="iconfont iconicon-test1"></i> <a href="#"><span>Facebook</span></a></dd>
-                    <dd><i class="iconfont iconyoutube"></i> <a href="#"><span>Youtube</span></a></dd>
-                    <dd><i class="iconfont iconinstagram"></i> <a href="#"><span>Instagram</span></a></dd>
-                    <dd><i class="iconfont iconicon-test2"></i> <a href="#"><span>Twitter</span></a></dd>
+                    <dd><i class="iconfont iconyoutube"></i> <a href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span>Youtube</span></a></dd>
+                    <dd><i class="iconfont iconinstagram"></i> <a href="https://www.instagram.com/minthouz/"><span>Instagram</span></a></dd>
+                    <dd><i class="iconfont iconicon-test2"></i> <a href="https://twitter.com/minthouz"><span>Twitter</span></a></dd>
                 </dl>
             </div>
 
