--- a/app/frontend/view/mobile/common/footer.html
+++ b/app/frontend/view/mobile/common/footer.html
@@ -16,9 +16,9 @@
             <dl>
                 <dt>FIND US</dt>
                 <dd><i class="iconfont iconicon-test1"></i> <a href="#"><span>Facebook</span></a></dd>
-                <dd><i class="iconfont iconyoutube"></i> <a href="#"><span>Youtube</span></a></dd>
-                <dd><i class="iconfont iconinstagram"></i> <a href="#"><span>Instagram</span></a></dd>
-                <dd><i class="iconfont iconicon-test2"></i> <a href="#"><span>Twitter</span></a></dd>
+                <dd><i class="iconfont iconyoutube"></i> <a href="https://www.youtube.com/channel/UC6fIQCkXBpVyH26fImEQCCA/"><span>Youtube</span></a></dd>
+                <dd><i class="iconfont iconinstagram"></i> <a href="https://www.instagram.com/minthouz/"><span>Instagram</span></a></dd>
+                <dd><i class="iconfont iconicon-test2"></i> <a href="https://twitter.com/minthouz"><span>Twitter</span></a></dd>
             </dl>
         </div>
 
