--- a/public/static/frontend/mobile/css/page/Home.css
+++ b/public/static/frontend/mobile/css/page/Home.css
@@ -17,10 +17,25 @@
 .banner .swiper-pagination-bullet-active {
   background: #00A82D;
 }
+.banner .img-box {
+  position: relative;
+}
+.banner .img-box .des {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  padding: 0 10px;
+  font-size: 18px;
+  color: #333;
+  text-align: center;
+}
 .hot {
   margin: 10px;
 }
 .hot .min-list .min-item {
+  position: relative;
   margin-bottom: 10px;
 }
 .hot .min-list .min-item:nth-last-of-type(1) {
@@ -32,6 +47,15 @@
   height: auto;
   margin-left: auto;
   margin-right: auto;
+}
+.hot .min-list .min-item .des {
+  position: absolute;
+  top: 20%;
+  left: 0;
+  z-index: 1;
+  width: 50%;
+  padding: 0 10px;
+  font-size: 16px;
 }
 .star {
   text-align: center;
