--- a/public/static/frontend/desktop/css/page/Home.less
+++ b/public/static/frontend/desktop/css/page/Home.less
@@ -127,7 +127,7 @@
             left: 0;
             width: 55%;
             text-align: left;
-            color: @baseColor;
+            color: @whiteSmoke;
             font-size: 18px;
         }
         &:nth-of-type(1) a {
