--- a/public/static/frontend/mobile/css/page/Home.less
+++ b/public/static/frontend/mobile/css/page/Home.less
@@ -54,6 +54,7 @@
             width: 50%;
             padding: 0 10px;
             font-size: 16px;
+            color: @whiteSmoke;
         }
     }
 }
