前台分类展示无极数据

--- a/app/admin/view/user/user/login.html
+++ b/app/admin/view/user/user/login.html
@@ -33,7 +33,7 @@
             <div class="">
                 <select name="language" lay-verify="">
                     <option value="1">英语</option>
-                    <!-- <option value="2" >简体中文</option> -->
+                    <option value="2">简体中文</option>
                 </select>
             </div>
             <hr class="hr15">
