--- a/app/admin/view/category/product_category/index.html
+++ b/app/admin/view/category/product_category/index.html
@@ -1,14 +1,14 @@
 {extend name="common:base" /}
 {block name="body"}
 <div class="x-nav">
-          <span class="layui-breadcrumb">
-            <a href="">首页</a>
-            <a href="">类目管理</a>
-            <a>
-              <cite>产品分类</cite></a>
-          </span>
+    <span class="layui-breadcrumb">
+        <a href="">首页</a>
+        <a href="">类目管理</a>
+        <a>
+            <cite>产品分类</cite></a>
+    </span>
     <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right"
-       onclick="location.reload()" title="刷新">
+        onclick="location.reload()" title="刷新">
         <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
 </div>
 <div class="layui-fluid">
@@ -18,7 +18,7 @@
                 <div class="layui-card-body ">
                     <div class="layui-input-inline layui-show-xs-block">
                         <button class="layui-btn"
-                                onclick="xadmin.open('添加','{:url(\'category/product/add\')}',800,600)"><i
+                            onclick="xadmin.open('添加','{:url(\'category/product/add\')}',800,600)"><i
                                 class="layui-icon"></i>添加
                         </button>
                     </div>
@@ -27,66 +27,67 @@
                 <div class="layui-card-body ">
                     <table class="layui-table layui-form">
                         <thead>
-                        <tr>
-                            <th width="20">
-                                <input type="checkbox" name="" lay-skin="primary">
-                            </th>
-                            <th width="70">ID</th>
-                            <th>栏目名</th>
-                            <th width="50">排序</th>
-                            <th width="50">状态</th>
-                            <th width="310">操作</th>
+                            <tr>
+                                <th width="20">
+                                    <input type="checkbox" name="" lay-skin="primary">
+                                </th>
+                                <th width="70">ID</th>
+                                <th>栏目名</th>
+                                <th width="50">排序</th>
+                                <th width="50">状态</th>
+                                <th width="310">操作</th>
                         </thead>
                         <tbody class="x-cate">
-                        {notempty name="category"}
-                        {volist name="category" id="vo"}
-                        <tr cate-id='{$vo.id}' fid='{$vo.parent_id}'>
-                            <td>
-                                <input type="checkbox" name="" lay-skin="primary">
-                            </td>
-                            <td>{$vo.id}</td>
-                            <td>
-                                {$vo.delimiter|raw}
-                                {if($vo.is_parent == 1)}
-                                <i class="layui-icon x-show" status='true'>&#xe623;</i>
-                                {else /}
-                                <i>├</i>
-                                {/if}
-                                {$vo.name}
-                            </td>
-                            <td><input type="text" class="layui-input x-sort" name="order" value="{$vo.listorder}"></td>
-                            <td>
-                                {if($vo.status == 1)}
-                                <button class="layui-btn layui-btn-normal layui-btn-mini">启用</button>
-                                {else /}
-                                <button class="layui-btn layui-btn-danger layui-btn-mini">禁用</button>
-                                {/if}
-                            </td>
-                            <td class="td-manage">
-                                <button class="layui-btn layui-btn layui-btn-xs"
+                            {notempty name="category"}
+                            {volist name="category" id="vo"}
+                            <tr cate-id='{$vo.id}' fid='{$vo.parent_id}'>
+                                <td>
+                                    <input type="checkbox" name="" lay-skin="primary">
+                                </td>
+                                <td>{$vo.id}</td>
+                                <td>
+                                    {$vo.delimiter|raw}
+                                    {if($vo.is_parent == 1)}
+                                    <i class="layui-icon x-show" status='true'>&#xe623;</i>
+                                    {else /}
+                                    <i>├</i>
+                                    {/if}
+                                    {$vo.name}
+                                </td>
+                                <td><input type="text" class="layui-input x-sort" name="listorder value="
+                                        {$vo.listorder}"></td>
+                                <td>
+                                    {if($vo.status == 1)}
+                                    <button class="layui-btn layui-btn-normal layui-btn-mini">启用</button>
+                                    {else /}
+                                    <button class="layui-btn layui-btn-danger layui-btn-mini">禁用</button>
+                                    {/if}
+                                </td>
+                                <td class="td-manage">
+                                    <button class="layui-btn layui-btn layui-btn-xs"
                                         onclick="xadmin.open('编辑','{:url(\'category/product/edit\',[\'id\'=>$vo.id])}',800,600)">
-                                    <i class="layui-icon">&#xe642;</i>编辑
-                                </button>
-                                {if($vo.is_parent === 1)}
-                                <button class="layui-btn layui-btn-warm layui-btn-xs"
+                                        <i class="layui-icon">&#xe642;</i>编辑
+                                    </button>
+                                    {if($vo.is_parent === 1)}
+                                    <button class="layui-btn layui-btn-warm layui-btn-xs"
                                         onclick="xadmin.open('添加子分类','{:url(\'category/product/add\',[\'id\'=>$vo.id])}')">
-                                    <i class="layui-icon">&#xe624;</i>子栏目
-                                </button>
-                                {/if}
-                                {if($vo.status == 2)}
-                                <button class="layui-btn layui-btn-normal layui-btn-mini"
+                                        <i class="layui-icon">&#xe624;</i>子栏目
+                                    </button>
+                                    {/if}
+                                    {if($vo.status == 2)}
+                                    <button class="layui-btn layui-btn-normal layui-btn-mini"
                                         onclick="changeStatus('{:url(\'category/product/change_status\',[\'id\'=>$vo.id,\'status\'=>1])}')">启用</button>
-                                {else /}
-                                <button class="layui-btn layui-btn-danger layui-btn-mini"
+                                    {else /}
+                                    <button class="layui-btn layui-btn-danger layui-btn-mini"
                                         onclick="changeStatus('{:url(\'category/product/change_status\',[\'id\'=>$vo.id,\'status\'=>2])}')">禁用</button>
-                                {/if}
-                                <!--<button class="layui-btn-danger layui-btn layui-btn-xs"
+                                    {/if}
+                                    <!--<button class="layui-btn-danger layui-btn layui-btn-xs"
                                         onclick="member_del(this,'要删除的id')" href="javascript:;"><i class="layui-icon">&#xe640;</i>删除
                                 </button>-->
-                            </td>
-                        </tr>
-                        {/volist}
-                        {/notempty}
+                                </td>
+                            </tr>
+                            {/volist}
+                            {/notempty}
                         </tbody>
                     </table>
                 </div>
